# peskas-api

./: .env.example  .gitignore  Dockerfile  NEWS.md  PRODUCTION_IMPROVEMENTS.md  README.md  SCHEMA_UPDATE_PLAN.md  api_keys.yaml.example  pyproject.toml  verify_setup.py
.github/workflows/: deploy.yml  release.yml
src/peskas_api/: __init__.py  main.py
src/peskas_api/api/: deps.py  router.py
src/peskas_api/api/endpoints/: datasets.py  health.py  metadata.py
src/peskas_api/core/: auth.py  config.py  exceptions.py
src/peskas_api/models/: audit.py  enums.py  params.py  permissions.py  responses.py
src/peskas_api/schema/: __init__.py  dataset_config.py  field_metadata.py  scopes.py
src/peskas_api/services/: __init__.py  api_keys.py  audit.py  gcs.py  permissions.py  query.py
tests/: __init__.py  conftest.py  test_auth.py  test_endpoints.py  test_params.py
